--- a/Debug/makefile
+++ b/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: ADC_DMA_.elf secondary-outputs
 
 # Tool invocations
-ADC_DMA_.elf ADC_DMA_.map: $(OBJS) $(USER_OBJS) D:\Projetos\ADCs_DMA\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ADC_DMA_.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Projetos\ADCs_DMA\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ADC_DMA_.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ADC_DMA_.elf ADC_DMA_.map: $(OBJS) $(USER_OBJS) /media/italo/SOFT/Projetos/ADCs_DMA/STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ADC_DMA_.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/media/italo/SOFT/Projetos/ADCs_DMA/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ADC_DMA_.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
